--- a/web/blog.html
+++ b/web/blog.html
@@ -96,11 +96,11 @@
                         </article>
                         <article>
                             <div class="heading">
-                                <h2><a href="blog3.html">ModelEngine</a></h2>
+                                <h2><a href="blog3.html">Minecraft Alpha v1.2.6</a></h2>
                             </div>
                             <div class="content">
                                 <img src="images/blog/b3.png" width="50%"/>
-                                <p> 기존에 배포되던 모델엔진 라이브러리와 작동 방식이 다른 플러그인 이자 라이브러리. 관절을 커스텀 가능하고 타 프로그램 이랑 연동 가능.
+                                <p> 마인크래프트 알파 1.2.6 버전을 웹에서 플레이 가능하도록 개발.
                                 </p>
                             </div>
                             <div class="info">
