--- a/web/blog1.html
+++ b/web/blog1.html
@@ -41,7 +41,7 @@
       </div>
 
       <div id="logo">
-        <a href="http://blog.dominicus.kr"><h1>DomiWeb</h1></a>
+        <a href="http://dominicus0830.github.io/DomiBlog/web/index"><h1>DomiWeb</h1></a>
         <p>Dominicus's Beveloment Blog</p>
       </div>
       <nav>
