--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
             </div>
 
             <div id="logo">
-                <a href="http://blog.dominicus.kr"><h1>DomiWeb</h1></a>
+                <a href="http://dominicus0830.github.io/DomiBlog/web/index"><h1>DomiWeb</h1></a>
                 <p>Dominicus's Develoment Blog</p>
             </div>
             <nav>
